--- a/index.html
+++ b/index.html
@@ -419,6 +419,7 @@
 								</div>
 							</article>
 						</div>
+						<!--<a href="##" class="works__btn">show more</a>-->
 					</div>
 				</div>
 			</section>
