версия с рабочей подгрузкой работ

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<div class="hello__content">
 						<h1 class="hello__title title">Welcome to STARTUP </h1>
 						<div class="hello__text">Your Favourite Creative Agency Template</div>
-						<a href="#" class="hello__btn btn">Get Started</a>
+						<a href="#services" class="hello__btn btn">Get Started</a>
 					</div>
 				</div>
 			</section>
@@ -419,9 +419,9 @@
 								</div>
 							</article>
 						</div>
-						<!--<a href="##" class="works__btn">show more</a>-->
 					</div>
 				</div>
+				<a href="##" class="works__btn">show more</a>
 			</section>
 			<section class="connection">
 				<div class="connection__container _container">
